@@ -43,6 +43,7 @@ Version 1.5.2 - CVS
   - Fixed automatic mailbox creation in left_main.php. 1.5.1 mailbox caching 
     broke detection of unsubscribed special folders.
   - Undo extra sanitizing in decodeHeader() function (#1460638).
+  - Added workaround for broken OpenBSD 3.8+ setlocale() function (#1427512).
 
 Version 1.5.1 (branched on 2006-02-12)
 --------------------------------------
